--- a/scss/cssclasses/_background-image.scss
+++ b/scss/cssclasses/_background-image.scss
@@ -32,8 +32,10 @@ body {
     /* Source */
     .fas-note-background-image .markdown-source-view:not(.no-background, .no-bg) .cm-editor,
     .markdown-source-view:is(.background-img, .bg-img) .cm-editor {
-        background-color: rgb(
-            from var(--workleaves-background) r g b / calc(1 - var(--fas-note-background-image-opacity))
+        background-color: color-mix(
+            in srgb,
+            var(--workleaves-background),
+            transparent calc(100% * var(--fas-note-background-image-opacity))
         );
         backdrop-filter: blur(var(--fas-note-background-image-blur))
             brightness(var(--fas-note-background-image-brightness));
@@ -43,8 +45,10 @@ body {
     body:not(.native-scrollbars).fas-note-background-image
         .markdown-preview-view:not(.no-background, .no-bg)::-webkit-scrollbar-track,
     body:not(.native-scrollbars) .markdown-preview-view:is(.background-img, .bg-img)::-webkit-scrollbar-track {
-        background-color: rgb(
-            from var(--workleaves-background) r g b / calc(1 - var(--fas-note-background-image-opacity))
+        background-color: color-mix(
+            in srgb,
+            var(--workleaves-background),
+            transparent calc(100% * var(--fas-note-background-image-opacity))
         );
     }
 
@@ -60,8 +64,10 @@ body {
                 0.5 * (100% - var(--file-margins-inline) - var(--file-line-width)) + var(--scrollbar-width)
             );
             max-width: 100%;
-            background-color: rgb(
-                from var(--workleaves-background) r g b / calc(1 - var(--fas-note-background-image-opacity))
+            background-color: color-mix(
+                in srgb,
+                var(--workleaves-background),
+                transparent calc(100% * var(--fas-note-background-image-opacity))
             );
             backdrop-filter: blur(var(--fas-note-background-image-blur))
                 brightness(var(--fas-note-background-image-brightness));
@@ -91,7 +97,7 @@ body {
 .fas-note-background-image .markdown-preview-view:not(.no-background, .no-bg) .metadata-container,
 .fas-note-background-image .markdown-source-view:not(.no-background, .no-bg) .metadata-container,
 :is(.background-img, .bg-img) .metadata-container {
-    background-color: rgb(from var(--workleaves-background) r g b / 0.7);
+    background-color: color-mix(in srgb, var(--workleaves-background), transparent 30%);
     backdrop-filter: blur(5px);
 }
 
