--- a/scss/cssclasses/_sci-fi.scss
+++ b/scss/cssclasses/_sci-fi.scss
@@ -224,7 +224,7 @@ body {
         }
 
         &:is([data-callout-metadata~="accent"])::before {
-            background: rgb(from var(--color-accent) r g b / var(--callout-border-opacity));
+            background: hsl(var(--accent-h) var(--accent-s) var(--accent-l) / var(--callout-border-opacity));
         }
     }
 }
