--- a/scss/editor/callouts/_callout-style.scss
+++ b/scss/editor/callouts/_callout-style.scss
@@ -22,9 +22,10 @@ body {
 
 [data-callout-metadata~="accent"] {
     > .callout-title {
-        background: linear-gradient(to right, rgb(from var(--color-accent) r g b / 0.1), transparent);
+        background: linear-gradient(to right, hsl(var(--accent-h) var(--accent-s) var(--accent-l) / 0.1), transparent);
     }
     > .callout-content {
-        border-top: var(--callout-border-width) dashed rgb(from var(--color-accent) r g b / var(--callout-border-opacity));
+        border-top: var(--callout-border-width) dashed
+            hsl(var(--accent-h) var(--accent-s) var(--accent-l) / var(--callout-border-opacity));
     }
 }
