--- a/snippets/canvas/canvas-node-bundle.css
+++ b/snippets/canvas/canvas-node-bundle.css
@@ -41,10 +41,19 @@ Author: ElsaTam (Kapirklaa in Discord)
   display: none;
 }
 
+@supports (color: hsl(from white h s l)) {
+  .canvas-node:has(.tag[href="#node-crime-scene-tape"], .node-crime-scene-tape):not(.is-editing) .canvas-node-container {
+    background-color: hsl(from rgb(var(--canvas-color)) h 100% 50%);
+  }
+}
+@supports not (color: hsl(from white h s l)) {
+  .canvas-node:has(.tag[href="#node-crime-scene-tape"], .node-crime-scene-tape):not(.is-editing) .canvas-node-container {
+    background-color: rgb(var(--canvas-color));
+  }
+}
 .canvas-node:has(.tag[href="#node-crime-scene-tape"], .node-crime-scene-tape):not(.is-editing) .canvas-node-container {
   border: none;
   box-shadow: none;
-  background-color: hsl(from rgb(var(--canvas-color)) h 100% 50%);
   border-radius: 0;
   box-shadow: 0px 0px 10px black;
   background-image: url("data:image/svg+xml;utf-8,<svg viewBox='0 0 90 8' xmlns='http://www.w3.org/2000/svg'><text style='font-style:normal;font-variant:normal;font-weight:900;font-stretch:normal;font-size:10px;line-height:1;font-family:Arial;letter-spacing:-0.661458px;word-spacing:0px;stroke-width:0' x='5' y='7.5px'><tspan dx='0 0 0 0 0 0'>CRIME SCENE</tspan></text></svg>");
@@ -135,11 +144,41 @@ body {
   --noise: url("data:image/svg+xml,%3Csvg viewBox='0 0 600 600' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch' /%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
 }
 
+@supports (color: hsl(from white h s l)) {
+  .canvas-node:has(.tag[href="#node-title-arcane"], .node-title-arcane):not(.is-editing) {
+    --cutout-border-background-gradient: linear-gradient(
+        to top,
+        rgba(var(--canvas-color), 0.9),
+        hsl(from rgb(var(--canvas-color)) calc(h - 10) calc(s * 0.7) calc(l * 0.9) / 0.9)
+    );
+  }
+  .canvas-node:has(.tag[href="#node-title-arcane"], .node-title-arcane):not(.is-editing) .markdown-preview-view {
+    --relief-color: hsl(from rgb(var(--canvas-color)) h calc(s * 0.5) calc(l * 0.5));
+  }
+  .canvas-node:has(.tag[href="#node-title-arcane"], .node-title-arcane):not(.is-editing) p {
+    --p-background-gradient: linear-gradient(
+        to top,
+        rgba(var(--canvas-color), 0.9),
+        hsl(from rgb(var(--canvas-color)) calc(h - 20) calc(s * 0.5) calc(l * 0.7) / 0.6)
+    );
+  }
+}
+@supports not (color: hsl(from white h s l)) {
+  .canvas-node:has(.tag[href="#node-title-arcane"], .node-title-arcane):not(.is-editing) {
+    --cutout-border-background-gradient: color-mix(in hsl, rgba(var(--canvas-color), 0.9), rgba(0, 0, 0, 0.9) 30%);
+  }
+  .canvas-node:has(.tag[href="#node-title-arcane"], .node-title-arcane):not(.is-editing) .markdown-preview-view {
+    --relief-color: color-mix(in hsl, rgb(var(--canvas-color)), black 50%);
+  }
+  .canvas-node:has(.tag[href="#node-title-arcane"], .node-title-arcane):not(.is-editing) p {
+    --p-background-gradient: color-mix(in hsl, rgba(var(--canvas-color), 0.9), rgba(100, 54, 0, 0.6) 40%);
+  }
+}
 .canvas-node:has(.tag[href="#node-title-arcane"], .node-title-arcane):not(.is-editing) {
   --cutout-corner-angle: 1.5em;
   --cutout-outline-inset: 0;
   --cutout-outline-thickness: 5px;
-  --cutout-border-background: linear-gradient(to top, rgba(var(--canvas-color), 0.9), hsl(from rgb(var(--canvas-color)) calc(h - 10) calc(s * 0.7) calc(l * 0.9) / 0.9)), var(--noise);
+  --cutout-border-background: var(--cutout-border-background-gradient), var(--noise);
 }
 .canvas-node:has(.tag[href="#node-title-arcane"], .node-title-arcane):not(.is-editing) .canvas-node-container {
   border: none;
@@ -151,7 +190,6 @@ body {
   background: none;
 }
 .canvas-node:has(.tag[href="#node-title-arcane"], .node-title-arcane):not(.is-editing) .markdown-preview-view {
-  --relief-color: hsl(from rgb(var(--canvas-color)) h calc(s * 0.5) calc(l * 0.5));
   font-family: "Arcane Nine", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: var(--font-extrabold);
   text-align: center;
@@ -164,7 +202,7 @@ body {
 }
 .canvas-node:has(.tag[href="#node-title-arcane"], .node-title-arcane):not(.is-editing) p {
   background-clip: text;
-  background-image: linear-gradient(to top, rgba(var(--canvas-color), 0.9), hsl(from rgb(var(--canvas-color)) calc(h - 20) calc(s * 0.5) calc(l * 0.7)/0.6)), var(--noise);
+  background-image: var(--p-background-gradient), var(--noise);
   color: transparent;
 }
 .canvas-node:has(.tag[href="#node-title-arcane"], .node-title-arcane):not(.is-editing) .canvas-node-container::before {
@@ -221,6 +259,16 @@ body {
   display: none;
 }
 
+@supports (color: hsl(from white h s l)) {
+  .canvas-node:has(.tag[href="#node-title-poster"], .node-title-poster):not(.is-editing) .markdown-preview-view {
+    --shadow-color: hsl(from rgb(var(--canvas-color)) h calc(s * 0.5) calc(l * 0.5));
+  }
+}
+@supports not (color: hsl(from white h s l)) {
+  .canvas-node:has(.tag[href="#node-title-poster"], .node-title-poster):not(.is-editing) .markdown-preview-view {
+    --shadow-color: color-mix(in hsl, rgb(var(--canvas-color)), black 50%);
+  }
+}
 .canvas-node:has(.tag[href="#node-title-vintage"], .node-title-vintage):not(.is-editing) .canvas-node-container {
   --s: 0.5em;
   border-radius: var(--radius-s);
