--- a/snippets/cssclasses/minimalist.css
+++ b/snippets/cssclasses/minimalist.css
@@ -39,7 +39,7 @@ Author: ElsaTam (Kapirklaa in Discord)
 
 .minimalist .callout {
   background: none;
-  border: var(--callout-border-width) solid rgb(from var(--text-normal) r g b/var(--callout-border-opacity));
+  border: var(--callout-border-width) solid color-mix(in srgb, var(--text-normal), transparent calc(100% * (1 - var(--callout-border-opacity))));
 }
 
 .minimalist .callout-title {
