--- a/snippets/editor/callouts/callout-fas-infobox.css
+++ b/snippets/editor/callouts/callout-fas-infobox.css
@@ -349,14 +349,14 @@ body {
 
 /* Color accent */
 .callout[data-callout=fas-infobox][data-callout-metadata~=accent] {
-  --hr-color: rgb(from var(--color-accent) r g b / var(--callout-border-opacity));
+  --hr-color: hsl(var(--accent-h) var(--accent-s) var(--accent-l) / var(--callout-border-opacity));
   --table-row-alt-background: color-mix(
       in srgb,
-      rgb(from var(--color-accent) r g b / 0.2),
+      hsl(var(--accent-h) var(--accent-s) var(--accent-l) / 0.2),
       rgba(var(--mono-rgb-0), 0.2) 50%
   );
-  --table-border-color: rgb(from var(--color-accent) r g b / var(--callout-border-opacity));
-  --table-header-border-color: rgb(from var(--color-accent) r g b / var(--callout-border-opacity));
+  --table-border-color: hsl(var(--accent-h) var(--accent-s) var(--accent-l) / var(--callout-border-opacity));
+  --table-header-border-color: hsl(var(--accent-h) var(--accent-s) var(--accent-l) / var(--callout-border-opacity));
 }
 .callout[data-callout=fas-infobox][data-callout-metadata~=accent] .image-embed[alt~=cover]::after {
   border-top: calc(0.5 * var(--triangle-size)) solid var(--color-accent);
@@ -378,7 +378,7 @@ body {
   background: color-mix(in srgb, var(--color-accent), rgb(var(--mono-rgb-0)) 80%);
 }
 .callout[data-callout=fas-infobox][data-callout-metadata~=accent] .callout[data-callout=footer]::after {
-  border-top: 2px dashed rgb(from var(--color-accent) r g b/var(--callout-border-opacity));
+  border-top: 2px dashed hsl(var(--accent-h) var(--accent-s) var(--accent-l)/var(--callout-border-opacity));
 }
 .callout[data-callout=fas-infobox][data-callout-metadata~=accent][data-callout-metadata~=corners]::before, .callout[data-callout=fas-infobox][data-callout-metadata~=accent][data-callout-metadata~=corners]::after {
   background-color: color-mix(in srgb, var(--color-accent), rgb(var(--mono-rgb-0)) 20%);
