--- a/snippets/editor/callouts/callouts-metadata.css
+++ b/snippets/editor/callouts/callouts-metadata.css
@@ -71,8 +71,8 @@ body {
 }
 
 [data-callout-metadata~=accent] {
-  border-color: rgb(from var(--color-accent) r g b/var(--callout-border-opacity));
-  background-color: rgb(from var(--color-accent) r g b/0.1);
+  border-color: hsl(var(--accent-h) var(--accent-s) var(--accent-l)/var(--callout-border-opacity));
+  background-color: hsl(var(--accent-h) var(--accent-s) var(--accent-l)/0.1);
 }
 [data-callout-metadata~=accent] > .callout-title {
   color: var(--color-accent);
